// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiscoveryExportCommand > discovers decorator entities via MetadataStorage.isKnownEntity 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > discovers multiple entities from multiple files 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author.js';
import { BookSchema } from './Book.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  Author,
  BookSchema,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > does not show warning when no entities found, if the discovery.warnWhenNoEntities config is set to false 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > dumps output to stdout with --dump flag 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { AuthorSchema } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  AuthorSchema,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > emits typed EntityManager alias for MongoDB driver 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/mongodb';

export const entities = [
  Author,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > generates CJS imports without extension 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > generates ESM imports with .js extension 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > includes Database type export 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > resolves driver package from config 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/postgresql';

export const entities = [
  Author,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > skips class implementations linked from EntitySchema 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { AuthorSchema } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  AuthorSchema,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;

exports[`DiscoveryExportCommand > writes to file when --dump is not set 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './Author.js';
import { type Constructor, EntityManager as DriverEntityManager } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = typeof entities;

export type EntityManager = DriverEntityManager & { '~entities': Database };
export const EntityManager = DriverEntityManager as Constructor<EntityManager>;
"
`;
